sas-core/main/default/objects/Special_Service_Request__c/Special_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Special Service Request</label>
    <nameField>
        <label>Special Service Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>