sas-core/main/default/objects/Special_Service_Request__c/fields/Brings_Own_Mobility_Device__c.field-meta.xml
<CustomField>
    <fullName>Brings_Own_Mobility_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brings Own Mobility Device</label>
    <type>Checkbox</type>
</CustomField>