sas-core/main/default/objects/Special_Service_Request__c/fields/GDPR_Wiped__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Wiped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wiped</label>
    <type>Checkbox</type>
</CustomField>