sas-core/main/default/objects/Special_Service_Request__c/fields/Mobility_Device_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Device_Dimensions__c</fullName>
    <label>Mobility Device Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>