sas-core/main/default/objects/Special_Service_Request__c/fields/Mobility_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Device_Type__c</fullName>
    <label>Mobility Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry Battery Wheelchair (WCBD )</fullName>
            </value>
            <value>
                <fullName>Wet Battery Wheelchair (WCBW)</fullName>
            </value>
            <value>
                <fullName>Lithium Battery Wheelchair (WCLB)</fullName>
            </value>
            <value>
                <fullName>Manual Power Wheelchair (WCMP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>