sas-core/main/default/objects/Special_Service_Request__c/fields/Passenger_Needing_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Needing_Assistance__c</fullName>
    <label>Passenger Needing Assistance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>