sas-core/main/default/objects/Special_Service_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Special Baggage</fullName>
            </value>
            <value>
                <fullName>Special Assistance</fullName>
            </value>
            <value>
                <fullName>Service Animal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>