sas-core/main/default/objects/Special_Service_Request__c/fields/Type_Of_Service_Animal__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Service_Animal__c</fullName>
    <label>Type Of Service Animal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>