sas-core/main/default/objects/Special_Service_Request__c/fields/Type_Of_Special_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Special_Assistance__c</fullName>
    <label>Type Of Special Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hearing disability</fullName>
            </value>
            <value>
                <fullName>Sight disability</fullName>
            </value>
            <value>
                <fullName>WCHR Ramp</fullName>
            </value>
            <value>
                <fullName>WCHS Steps</fullName>
            </value>
            <value>
                <fullName>WCHC Carry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>