sas-core/main/default/objects/Special_Service_Request__c/fields/Type_Of_Special_Baggage__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Special_Baggage__c</fullName>
    <label>Type Of Special Baggage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>